# RHYME-XT

./: .gitignore  README.md  environment.yml  pyproject.toml  results2.npz  results3.npz
data_generation/: amari.yaml  amaricoupled.yaml  brian2.yaml  brian2_FHN.yaml  brian2_LIF.yaml  brian2_LIFCoupled.yaml  brian2_gaussian.yaml  brian2_mexhat.yaml  brian2_oscillatory.yaml  fhn.yaml  generate_data.py  greenshields.yaml  heat.yaml  hhffe.yaml  hhfs.yaml  linsys.yaml  semble_generate.py  twotank.yaml  vdp.yaml
experiments/: Test_Discretization.ipynb  Test_Transferlearning.ipynb  Test_noise.ipynb  Test_nrTrajectories.ipynb  Test_performance.ipynb  Test_performance_vs_DON.ipynb  Test_timehorizons.ipynb  generate_data.py  interactive_test.py  load_data.py  semble_generate.py  train_don.ipynb  train_sweep_wandb.py  train_wandb.py  train_wandb_DON.py  train_wandb_pretrained.py  train_wandb_sweep.py  train_wandb_transfer.py
experiments/WB_sweeps/: L1_sweep.yaml  MSE_sweep.yaml
models_trunk/: trunk_model.pth
models_trunk/brian2/: lif.pth  trunk_model-brian_T2500_S100_LOOP.pth
plot/: plot_results.py
src/RHYME_XT/: __init__.py  model.py  trajectory.py
src/flumen/: __init__.py  experiment.py  model.py  run.py  train.py  trajectory.py  utils.py
