[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "RHYME-XT"
dynamic = ["version"]
authors = [{name = "Marijn Ruiter", email = "marijnruiter09@gmail.com"}]
description = "A neural operator for modelling exctiable spatio-temporal rhythms"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.18", "torch>=1.8.0"]
requires-python = ">= 3.6"

[project.urls]
Repository = "https://github.com/Marijn-dev/RHYME-XT"

[project.optional-dependencies]
experiments = ["wandb", "semble", "scipy>=1.5"]
